CSS issues corrected

--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,3 +1,8 @@
+/*
+Comment: Disabled global.css until implementation is in place. Enabling it introduces bugs to css of current design.
+
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; 
+
+*/
