--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,8 +1,5 @@
-/*
-Comment: Disabled global.css until implementation is in place. Enabling it introduces bugs to css of current design.
+/* Comment: Disabled global.css until implementation is in place. Enabling it introduces bugs to css of current design. */
 
 @tailwind base;
 @tailwind components;
-@tailwind utilities; 
-
-*/
+@tailwind utilities;
