--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -116,7 +116,13 @@ body {
 }
 ol,
 ul {
-  list-style: none;
+  display: block;
+  list-style-type: disc;
+  margin-top: 1em;
+  margin-bottom: 1 em;
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 40px;
 }
 blockquote,
 q {
@@ -138,4 +144,62 @@ a {
   color: #543dca;
   font-weight: 600;
   text-decoration: none;
+}
+
+pre {
+  background: #f4f4f4;
+  border: 1px solid #ddd;
+  border-left: 3px solid #f36d33;
+  color: #666;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word;
+}
+
+code {
+  background-color: #1e1f26;
+  color: white;
+  border-radius: 0.3rem;
+  padding: 4px 5px 5px;
+  white-space: nowrap;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 60px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 40px;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 30px;
+}
+
+h4 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 140%;
+}
+
+h5 {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 140%;
+}
+
+h6 {
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 130%;
 }
